Fix behavior of navbar on mobile

--- a/apps/site/assets/css/_events.scss
+++ b/apps/site/assets/css/_events.scss
@@ -49,7 +49,6 @@ $mobile-control-height: 73px;
     @include media-breakpoint-down(xs) {
       padding-left: $base-spacing;
       transition: top .2s ease-in-out;
-      z-index: 12; // overwrite 13 that's default so it doesn't show on top of the mobile nav
 
       .js-nav-down & {
         top: 0;
@@ -134,6 +133,8 @@ $mobile-control-height: 73px;
   height: $mobile-control-height;
   padding: $base-spacing;
   transition: top .2s ease-in-out;
+  position: sticky;
+  z-index: 14; // one-up value so the mobile nav shows on top
 
   .m-event-list__select {
     height: 100%;
